# AudioSync

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cpp
UI/Web/Client/: index.html  script.js  style.css
include/: ASSERT.hpp  AudioLibraryInfo.hpp  BaseAudioInfo.hpp  BaseException.hpp  BaseFunctions.hpp  Diff.hpp  OtherDirectory.hpp  Settings.hpp  StreamingAPI.hpp  Target.hpp  Tools.hpp  UI.hpp
include/DebugTools/: ASSERT.hpp  NOEXCEPT.hpp
src/: AudioLibraryInfo.cpp  BaseAudioInfo.cpp  BaseException.cpp  OtherDirectory.cpp  Settings.cpp  StreamingAPI.cpp  Tools.cpp  UI.cpp
src/BaseFunctions/: SyncWithLocalDirectories.cpp  SyncWithStreamingServices.cpp
src/DebugTools/: ASSERT.cpp
tests/cpp_tests/: CMakeLists.txt
tests/cpp_tests/gTests/: Settings_tests.cpp
tests/cpp_tests/include/: EmptySettingsFile.hpp  NormalSettingsFile.hpp  SettingsFileFixture.hpp  TestTools.hpp  WithoutSettingsFile.hpp
tests/cpp_tests/src/: EmptySettingsFile.cpp  NormalSettingsFile.cpp  SettingsFileFixture.cpp  WithoutSettingsFile.cpp
